[package]
name = "wmbus"
version = "0.1.0"
edition = "2021"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
repository = "https://github.com/rmja/wmbus"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["en13757", "oms", "wmbus"]
description = "Wireless M-Bus (EN13757) protocol"

[features]
default = []
ctrl = ["futures", "futures-async-stream"]
all = ["ctrl"]

[dependencies]
bcd = { git = "https://github.com/rmja/bcd" }
bitvec = { version = "1", default-features = false, features = ["alloc"] }
crc = "2.0"
futures = { version = "0.3.0", default-features = false, optional = true }
futures-async-stream = { version = "0.2", optional = true }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
assert_hex = "0.2"
mockall = "0.11"
