[package]
name = "wmbus"
version = "0.1.0"
edition = "2021"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
repository = "https://github.com/rmja/wmbus"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["en13757", "oms", "wmbus"]
description = "Wireless M-Bus (EN13757) protocol"

[features]
ctrl = ["dep:embassy-time", "dep:futures", "dep:futures-async-stream"]

[dependencies]
bitvec = { version = "1", default-features = false }
bytes = { version = "1.4", default-features = false }
crc = "3"
defmt = { version = "0.3", optional = true }
embassy-time = { version = "0.2", optional = true }
futures = { version = "0.3", default-features = false, optional = true }
futures-async-stream = { version = "0.2", optional = true }
heapless = "0.8"
nobcd = "0.2"
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
assert_hex = "0.4"
bitvec = "1"
mockall = "0.11"
